--- a/fluid-gallery.css
+++ b/fluid-gallery.css
@@ -15,7 +15,7 @@ body {
 .gallery-container h1 {
     text-align: center;
     margin-top: 50px;
-    font-family: 'Droid Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
 }
 
