--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     font-size: 14px;
     font-weight: 400;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .header .header-top .contact p span {
@@ -59,7 +59,7 @@
 .header .header-bottom .menu ul li a {
   
     color: #000;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     margin-right: 0;
@@ -99,13 +99,13 @@
     color: #fff;
     font-size: 35px;
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin-top: 210px;
 }
 
 .carosal-area .text>p {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 30px;
@@ -122,7 +122,7 @@
     border: 1px solid #fff;
     border-radius: 25px;
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     padding: 15px 40px;
@@ -131,7 +131,7 @@
 
 .carosal-area .text>h5.white-button a {
     background: #fff;
-    color: #01d262;
+    color: #E4C81F;
 }
 
 .carosal-area .owl-prev {
@@ -174,7 +174,7 @@
 /*
 .wrapper section>h2 {
     color: #3c354e;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 32px;
     font-weight: 700;
     margin: 115px auto 50px;
@@ -186,7 +186,7 @@
 
 .wrapper section>h2 {
     color: #3c354e;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 32px;
     font-weight: 700;
     margin: 115px auto 50px;
@@ -198,7 +198,7 @@
 }
 
 .wrapper section>h2::before {
-    background: #01d262 none repeat scroll 0 0;
+    background: #E4C81F none repeat scroll 0 0;
     bottom: -13px;
     content: "";
     height: 2px;
@@ -209,7 +209,7 @@
 }
 
 .wrapper section>p {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 30px;
@@ -255,7 +255,7 @@
 
 .our_activity .single-Promo h2 a {
     text-decoration: none;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 22px;
     font-weight: 500;
     color: #3c354e;
@@ -263,7 +263,7 @@
 
 .our_activity .single-Promo p {
     color: #3c354e;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 26px;
@@ -281,16 +281,16 @@
 }
 
 .our_activity .single-Promo:hover>h2 a {
-    color: #01d262;
+    color: #E4C81F;
 }
 
 .our_activity .single-Promo:hover>.promo-icon i {
-    background: #01d262;
+    background: #E4C81F;
     color: #fff;
 }
 
 .our_activity .single-Promo:hover>h2::before {
-    background: #01d262;
+    background: #E4C81F;
     color: #fff;
 }
 
@@ -300,7 +300,7 @@
 }
 
 .donate_section h4 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     font-weight: 500;
     color: #fff;
@@ -309,7 +309,7 @@
 
 .donate_section h3 {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 35px;
@@ -318,7 +318,7 @@
 
 .donate_section p {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 30px;
@@ -369,7 +369,7 @@
     background: #fff none repeat scroll 0 0;
     border-radius: 30px;
     color: #05ce68;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     padding: 15px 40px;
@@ -387,7 +387,7 @@
 
 .events_section_area .events_single p {
     font-size: 14px;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     margin-top: 14px;
     font-weight: 400;
     position: relative;
@@ -413,7 +413,7 @@
 }
 
 .events_section_area .events_single h3 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     font-weight: 700;
     margin-top: 70px;
@@ -421,13 +421,13 @@
 }
 
 .events_section_area .events_single:hover h3 {
-    color: #01d262;
+    color: #E4C81F;
     text-decoration: underline;
 }
 
 .events_section_area .events_single h6 {
     color: #6f6f6f;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 32px;
@@ -451,7 +451,7 @@
 
 .our_cuauses .our_cuauses_single .item h2 {
     color: #3c354e;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     font-weight: 700;
     margin: 110px 0 40px;
@@ -459,14 +459,14 @@
 
 .our_cuauses .our_cuauses_single .item p {
     color: #595959;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     margin: 0;
 }
 
 .our_cuauses .our_cuauses_single .item p span {
-    color: #01d262;
+    color: #E4C81F;
 }
 
 .our_cuauses .our_cuauses_single .item p.progress-top {
@@ -485,7 +485,7 @@
 }
 
 .our_cuauses .progress-bar {
-    background-color: #01d262;
+    background-color: #E4C81F;
 }
 
 .our_cuauses .progress-text {
@@ -512,7 +512,7 @@
 
 .our_cuauses h2. {
     color: #3c354e;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 32px;
     font-weight: 700;
     margin: 115px auto 50px;
@@ -521,7 +521,7 @@
 }
 
 .our_cuauses h2::before {
-    background: #01d262 none repeat scroll 0 0;
+    background: #E4C81F none repeat scroll 0 0;
     bottom: -13px;
     content: "";
     height: 2px;
@@ -531,7 +531,7 @@
 }
 
 .our_cuauses h2.borderes::before {
-    background: #01d262 none repeat scroll 0 0;
+    background: #E4C81F none repeat scroll 0 0;
     bottom: -13px;
     content: "";
     height: 0px;
@@ -541,7 +541,7 @@
 }
 
 .wrapper .our_cuauses>p {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 30px;
@@ -552,7 +552,7 @@
     background: #fff none repeat scroll 0 0;
     border-radius: 30px;
     color: #05ce68;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     padding: 15px 40px;
@@ -565,12 +565,12 @@
 }
 
 .our_cuauses .our_cuauses_single .item .for_padding:hover>h2 {
-    color: #01d262;
+    color: #E4C81F;
 }
 
 .our_cuauses .our_cuauses_single .item .for_padding:hover>h2 a {
     color: #fff;
-    background: #01d262;
+    background: #E4C81F;
 }
 
 .our_cuauses .owl-theme .owl-nav {
@@ -592,9 +592,9 @@
 
 .our_cuauses .owl-theme .owl-nav i {
     background: #fff none repeat scroll 0 0;
-    border: 1px solid #01d262;
+    border: 1px solid #E4C81F;
     border-radius: 5px;
-    color: #01d262;
+    color: #E4C81F;
     font-size: 25px;
     height: 50px;
     overflow: hidden;
@@ -603,7 +603,7 @@
 }
 
 .our_cuauses .owl-theme .owl-nav i:hover {
-    background: #01d262;
+    background: #E4C81F;
     color: #fff;
 }
 
@@ -622,7 +622,7 @@
 .donors .donors_input h2,
 .donors .donors_image h2 {
     color: #272727;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 22px;
     font-weight: 500;
     margin: 75px 0 50px;
@@ -635,7 +635,7 @@
 
 .donors .donors_input p {
     color: #272727;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     margin: 35px 0;
@@ -663,7 +663,7 @@
 }
 
 .donors .donors_input h5 input[type="text"] {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #E4C81F;
@@ -671,7 +671,7 @@
 }
 
 .donors .donors_input h5 input[type="email"] {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #fff;
@@ -680,10 +680,10 @@
 
 .donors .donors_input input[type="submit"] {
     background: #fff none repeat scroll 0 0;
-    border: 2px solid #01d262;
+    border: 2px solid #E4C81F;
     border-radius: 10px;
-    color: #01d262;
-    font-family: "Roboto", sans-serif;
+    color: #E4C81F;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 500;
     margin-top: 45px;
@@ -702,7 +702,7 @@
     padding: 17px 20px;
     border-radius: 10px;
     border: 1px solid #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #fff;
@@ -727,13 +727,13 @@
 }
 
 .donors .donors_image .item h3 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     font-weight: 500;
 }
 
 .donors .donors_image .item p {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     margin: 10px 0 75px;
@@ -779,14 +779,14 @@
 }
 
 .volunteer_area .item .text h3 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 18px;
     font-weight: 500;
     margin: 0;
 }
 
 .volunteer_area .item .text h6 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     margin: 10px 0 0;
@@ -799,7 +799,7 @@
 }
 
 .volunteer_area .item .text p {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     margin: 10px 0 0;
@@ -865,7 +865,7 @@
 
 .carosal_bottom .item p {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
@@ -883,7 +883,7 @@
 
 .carosal_bottom .item h4 {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 700;
     margin-top: 13px;
@@ -891,7 +891,7 @@
 }
 
 .carosal_bottom .item h6 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     color: #fff;
@@ -920,7 +920,7 @@
 }
 
 .letast_news .single_news .texts p.date a {
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     text-decoration: none;
@@ -929,7 +929,7 @@
 
 .letast_news .single_news .texts h3 {
     color: #000;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 27px;
@@ -938,7 +938,7 @@
 
 .letast_news .single_news .texts p.texts {
     color: #000;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 20px;
@@ -948,7 +948,7 @@
 
 .letast_news .single_news .texts h3 a {
     color: #000;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
@@ -1119,14 +1119,14 @@
 
 .block-wrapper .block p.counter-wrapper span {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 35px;
     font-weight: 700;
 }
 
 .block-wrapper .block p.text-block {
     color: #fff;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
 }
@@ -1160,7 +1160,7 @@
 .gallery-container h1 {
     text-align: center;
     margin-top: 70px;
-    font-family: 'Droid Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
 }
 
@@ -1238,3 +1238,129 @@
     padding: 15px 0;
 }
 
+
+
+/*******************************/
+/********* Footer CSS **********/
+/*******************************/
+.footer {
+    position: relative;
+    margin-top: 45px;
+    padding-top: 90px;
+    background: #20212B;
+}
+
+.footer .footer-contact,
+.footer .footer-link,
+.footer .footer-newsletter {
+    position: relative;
+    margin-bottom: 45px;
+    color: #ffffff;
+}
+
+.footer .footer-contact h2,
+.footer .footer-link h2,
+.footer .footer-newsletter h2 {
+    margin-bottom: 30px;
+    font-size: 22px;
+    font-weight: 700;
+    color: #FDBE33;
+}
+
+.footer .footer-link a {
+    display: block;
+    margin-bottom: 10px;
+    color: #ffffff;
+    transition: .3s;
+}
+
+.footer .footer-link a::before {
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 10px;
+}
+
+.footer .footer-link a:hover {
+    color: #FDBE33;
+    letter-spacing: 1px;
+}
+
+.footer .footer-contact p i {
+    width: 25px;
+}
+
+.footer .footer-social {
+    position: relative;
+    margin-top: 20px;
+}
+
+.footer .footer-social a {
+    width: 40px;
+    height: 40px;
+    padding: 6px 0;
+}
+
+.footer .footer-social a {
+    margin-top: 5px;
+}
+
+.footer .footer-newsletter form {
+    position: relative;
+    width: 100%;
+}
+
+.footer .footer-newsletter input {
+    margin-bottom: 15px;
+    height: 60px;
+    border: none;
+    border-radius: 0;
+}
+
+.footer .footer-newsletter label {
+    margin-top: 5px;
+    color: #777777;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.footer .footer-newsletter .btn.btn-custom {
+    width: 100%;
+    padding: 15px 0;
+}
+
+.footer .copyright {
+    padding: 0 30px;
+}
+
+.footer .copyright .row {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
+}
+
+.footer .copyright p {
+    margin: 0;
+    color: #999999;
+}
+
+.footer .copyright .col-md-6:last-child p {
+    text-align: right;
+}
+
+.footer .copyright p a {
+    color: #ffffff;
+}
+
+.footer .copyright p a:hover {
+    color: #FDBE33;
+}
+
+@media (max-width: 767.98px) {
+    .footer .copyright p,
+    .footer .copyright .col-md-6:last-child p {
+        margin: 5px 0;
+        text-align: center;
+    }
+}
