--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -725,6 +725,7 @@ th {
 }
 .glyphicon-usd:before {
   content: "\e148";
+
 }
 .glyphicon-gbp:before {
   content: "\e149";
@@ -1097,12 +1098,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #E4C81F;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: #E4C81F7c;
   text-decoration: underline;
 }
 a:focus {
@@ -1337,11 +1338,11 @@ mark,
   color: #777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #E4C81F;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #286090;
+  color: #E4C81F;
 }
 .text-success {
   color: #E4C81F;
@@ -1351,11 +1352,11 @@ a.text-success:focus {
   color: #E4C81F;
 }
 .text-info {
-  color: #31708f;
+  color: #E4C81F;
 }
 a.text-info:hover,
 a.text-info:focus {
-  color: #245269;
+  color: #E4C81F;
 }
 .text-warning {
   color: #8a6d3b;
@@ -1373,11 +1374,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #E4C81F;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #286090;
+  background-color: #E4C81F;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3135,26 +3136,26 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
+  background-color: #E4C81F;
   border-color: #122b40;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3166,7 +3167,7 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #fff;
-  background-color: #204d74;
+  background-color: #E4C81F;
   border-color: #122b40;
 }
 .btn-primary:active,
@@ -3183,11 +3184,11 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #E4C81F;
   background-color: #fff;
 }
 .btn-success {
@@ -3250,25 +3251,25 @@ fieldset[disabled] .btn-success.focus {
 .btn-info {
   color: #fff;
   background-color: #E4C81F;
-  border-color: #46b8da;
+  border-color: #E4C81F;
 }
 .btn-info:focus,
 .btn-info.focus {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #1b6d85;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-info:hover {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #31b0d5;
-  border-color: #269abc;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-info:active:hover,
 .btn-info.active:hover,
@@ -3280,8 +3281,8 @@ fieldset[disabled] .btn-success.focus {
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
   color: #fff;
-  background-color: #269abc;
-  border-color: #1b6d85;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3298,7 +3299,7 @@ fieldset[disabled] .btn-info:focus,
 .btn-info[disabled].focus,
 fieldset[disabled] .btn-info.focus {
   background-color: #E4C81F;
-  border-color: #46b8da;
+  border-color: #E4C81F;
 }
 .btn-info .badge {
   color: #E4C81F;
@@ -3420,7 +3421,7 @@ fieldset[disabled] .btn-danger.focus {
 }
 .btn-link {
   font-weight: normal;
-  color: #337ab7;
+  color: #E4C81F;
   border-radius: 0;
 }
 .btn-link,
@@ -3440,7 +3441,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #23527c;
+  color: #E4C81F7c;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3589,7 +3590,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #E4C81F;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -4024,7 +4025,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #337ab7;
+  border-color: #E4C81F;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4117,7 +4118,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #E4C81F;
 }
 .nav-stacked > li {
   float: none;
@@ -4744,7 +4745,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #E4C81F;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4765,7 +4766,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
+  color: #E4C81F7c;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4778,8 +4779,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4895,11 +4896,11 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #E4C81F;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #E4C81F;
 }
 .label-success {
   background-color: #E4C81F;
@@ -4913,7 +4914,7 @@ a.label:focus {
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #31b0d5;
+  background-color: #E4C81F;
 }
 .label-warning {
   background-color: #f0ad4e;
@@ -4963,7 +4964,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #E4C81F;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5038,7 +5039,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #E4C81F;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5087,7 +5088,7 @@ a.thumbnail.active {
   color: #E4C81F;
 }
 .alert-info {
-  color: #31708f;
+  color: #E4C81F;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
@@ -5095,7 +5096,7 @@ a.thumbnail.active {
   border-top-color: #a6e1ec;
 }
 .alert-info .alert-link {
-  color: #245269;
+  color: #E4C81F;
 }
 .alert-warning {
   color: #8a6d3b;
@@ -5160,7 +5161,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #E4C81F;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -5324,8 +5325,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5373,12 +5374,12 @@ button.list-group-item-success.active:focus {
   border-color: #E4C81F;
 }
 .list-group-item-info {
-  color: #31708f;
+  color: #E4C81F;
   background-color: #d9edf7;
 }
 a.list-group-item-info,
 button.list-group-item-info {
-  color: #31708f;
+  color: #E4C81F;
 }
 a.list-group-item-info .list-group-item-heading,
 button.list-group-item-info .list-group-item-heading {
@@ -5388,7 +5389,7 @@ a.list-group-item-info:hover,
 button.list-group-item-info:hover,
 a.list-group-item-info:focus,
 button.list-group-item-info:focus {
-  color: #31708f;
+  color: #E4C81F;
   background-color: #c4e3f3;
 }
 a.list-group-item-info.active,
@@ -5398,8 +5399,8 @@ button.list-group-item-info.active:hover,
 a.list-group-item-info.active:focus,
 button.list-group-item-info.active:focus {
   color: #fff;
-  background-color: #31708f;
-  border-color: #31708f;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .list-group-item-warning {
   color: #8a6d3b;
@@ -5721,22 +5722,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #E4C81F;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #E4C81F;
+  border-color: #E4C81F;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #E4C81F;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #E4C81F;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #E4C81F;
 }
 .panel-success {
   border-color: #d6e9c6;
@@ -5760,7 +5761,7 @@ button.list-group-item-danger.active:focus {
   border-color: #bce8f1;
 }
 .panel-info > .panel-heading {
-  color: #31708f;
+  color: #E4C81F;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
@@ -5769,7 +5770,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-info > .panel-heading .badge {
   color: #d9edf7;
-  background-color: #31708f;
+  background-color: #E4C81F;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #bce8f1;
