Update Saturday - Douglas
Donate button
New gallery img
removed the link of the img gallery (since is not being able to close the img as overlay)

--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
-    color: #E4C81F;
+    color: rgb(22, 22, 22)
     margin-right: 2%;
 }
 
