--- a/fluid-gallery.css
+++ b/fluid-gallery.css
@@ -13,7 +13,7 @@ body {
 }
 
 .gallery-container h1 {
-    text-align: center;
+    text-align: center;dd
     margin-top: 50px;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
