--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
-    background: #20212B;
+    background: #272727;
 }
 
 .footer .footer-contact,
