help text, logo

--- a/style.css
+++ b/style.css
@@ -1705,6 +1705,17 @@
     color: #FDBE33;
 }
 
+.logoTransparency{
+    text-align: center;
+}
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
+}
+
 @media (max-width: 767.98px) {
     .footer .copyright p,
     .footer .copyright .col-md-6:last-child p {
