--- a/style.css
+++ b/style.css
@@ -1353,6 +1353,7 @@
     color: #fff;
     text-align: center;
   }
+
   .p-0 {
     padding: 0 !important;
   }
@@ -1469,14 +1470,17 @@
   .carousel-caption {
     position: absolute;
     right: 15%;
-    bottom: 20px;
+    bottom: 50px;
     left: 15%;
+    top: 90px;
     z-index: 10;
     padding-top: 400px;
-    padding-bottom: 50px;
+    padding-bottom: 400px;
     color: #fff;
     text-align: center;
   }
+
+  
   .carousel-caption {
     top: 0;
     left: 0;
@@ -1484,6 +1488,7 @@
     bottom: 0;
     background: rgba(0, 0, 0, 0.3);
     z-index: 1;
+    text-align: center;
   }
 
 /* END NEW CAROSEL */ 
@@ -1735,6 +1740,7 @@
 .block{
     justify-content: center;
 }
+
 
 
 @media (max-width: 767.98px) {
