--- a/style.css
+++ b/style.css
@@ -1735,13 +1735,19 @@
     margin-left: auto;
     margin-right: auto;
     padding: 50px;
+    padding-top: 80px;
+}
+
+.left{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
 }
 
 .block{
     justify-content: center;
 }
-
-
 
 @media (max-width: 767.98px) {
     .footer .copyright p,
